test/yaml/testdata/output/headers/upstream-vhost.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vhost-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: backend.example.com
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-prefix-root
status:
  parents: []
